Added updated Responsive-portfolio

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Phil</title>
   <link rel="stylesheet" type="text/css" href="C:\Users\Sephi\Desktop\reset.css">
-    <link rel="stylesheet" type="text/css" href=Portfolio.css>
+    <link rel="stylesheet" type="text/css" href="Portfolio.css">
 </head>
 
   <body>
